--- a/app/src/main/res/layout/activity_show_result.xml
+++ b/app/src/main/res/layout/activity_show_result.xml
@@ -6,19 +6,19 @@
     android:layout_height="match_parent"
     tools:context=".ShowResultActivity">
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="258dp"
-        android:layout_height="405dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="24dp"
-        android:text="TextView"
+    <TableLayout
+        android:id="@+id/stockTable"
+        android:layout_width="368dp"
+        android:layout_height="495dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TableRow
+            android:id="@+id/attribRow"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </TableLayout>
 </android.support.constraint.ConstraintLayout>
