--- a/app/src/main/res/layout/stock_row.xml
+++ b/app/src/main/res/layout/stock_row.xml
@@ -3,8 +3,11 @@
 <TextView
     android:layout_width="80dp"
     android:layout_height="20dp"
+    android:layout_gravity="fill"
+    android:singleLine="true"
+    android:lines="1"
     android:id="@+id/stock_name_cell"
-    android:textStyle="bold"/>
+    android:textStyle="normal"/>
 <TextView
     android:layout_width="80dp"
     android:layout_height="20dp"
@@ -12,15 +15,25 @@
     android:gravity="right"
     android:textStyle="normal"/>
 <TextView
-    android:layout_width="80dp"
+    android:layout_width="20dp"
+    android:layout_height="20dp"
+    android:id="@+id/stock_color"
+    android:gravity="left"
+    android:textStyle="normal"/>
+<TextView
+    android:layout_width="40dp"
     android:layout_height="20dp"
     android:id="@+id/stock_percent_cell"
-    android:gravity="right"
+    android:gravity="left"
     android:textStyle="normal"/>
+
 <TextView
     android:layout_width="80dp"
     android:layout_height="20dp"
     android:id="@+id/stock_unit_cell"
-    android:gravity="right"
+    android:gravity="left"
+    android:layout_gravity="fill"
+    android:singleLine="true"
+    android:lines="1"
     android:textStyle="normal"/>
 </TableRow>
