(1) Scrollable Result (2) ImageView in Result (3) Source Spinner

--- a/app/src/main/res/layout/activity_show_result.xml
+++ b/app/src/main/res/layout/activity_show_result.xml
@@ -6,20 +6,57 @@
     android:layout_height="match_parent"
     tools:context=".ShowResultActivity">
 
-    <TableLayout
-        android:id="@+id/stockTable"
-        android:layout_width="368dp"
-        android:layout_height="495dp"
-        android:isScrollContainer="true"
+    <ScrollView
+        android:id="@+id/resultScrollView"
+        android:layout_width="395dp"
+        android:layout_height="340dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="120dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="134dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/financeHeaderImageView">
 
-        <TableRow
-            android:id="@+id/attribRow"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-    </TableLayout>
+            <TableLayout
+                android:id="@+id/stockTable"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:isScrollContainer="true"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <TableRow
+                    android:id="@+id/attribRow"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+            </TableLayout>
+
+        </LinearLayout>
+    </ScrollView>
+
+    <ImageView
+        android:id="@+id/financeHeaderImageView"
+        android:layout_width="394dp"
+        android:layout_height="121dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/transpfinhead" />
+
 </android.support.constraint.ConstraintLayout>
