--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,7 +54,7 @@
         android:layout_marginEnd="273dp"
         android:layout_marginRight="273dp"
         android:layout_marginBottom="115dp"
-        android:text="Button"
+        android:text="Testing"
         app:layout_constraintBottom_toTopOf="@+id/WebTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -77,14 +77,11 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="333dp"
+        android:layout_width="fill_parent"
         android:layout_height="132dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginLeft="40dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginRight="40dp"
         android:layout_marginBottom="21dp"
+        android:scaleType="fitXY"
         app:layout_constraintBottom_toTopOf="@+id/SourceSelectionSpinner"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
