--- a/app/src/main/res/layout/activity_show_result.xml
+++ b/app/src/main/res/layout/activity_show_result.xml
@@ -9,17 +9,16 @@
     <ScrollView
         android:id="@+id/resultScrollView"
         android:layout_width="395dp"
-        android:layout_height="340dp"
+        android:layout_height="362dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="134dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/financeHeaderImageView">
+        app:layout_constraintTop_toBottomOf="@+id/finScourceSpinner">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -47,16 +46,30 @@
 
     <ImageView
         android:id="@+id/financeHeaderImageView"
-        android:layout_width="394dp"
+        android:layout_width="fill_parent"
         android:layout_height="121dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:scaleType="fitXY"
+        app:layout_constraintBottom_toTopOf="@+id/finScourceSpinner"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/transpfinhead" />
+        app:srcCompat="@drawable/finance" />
+
+    <Spinner
+        android:id="@+id/finScourceSpinner"
+        android:layout_width="395dp"
+        android:layout_height="49dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/resultScrollView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/financeHeaderImageView" />
 
 </android.support.constraint.ConstraintLayout>
