--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,12 +11,12 @@
         android:id="@+id/StartButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="134dp"
+        android:layout_marginTop="118dp"
+        android:layout_marginEnd="51dp"
+        android:layout_marginRight="51dp"
         android:text="@string/stockButtonText"
-        app:layout_constraintBottom_toTopOf="@+id/WebTextView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.83"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/SourceSelectionSpinner" />
 
     <TextView
         android:id="@+id/WebTextView"
@@ -37,12 +37,12 @@
         android:id="@+id/showResultButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="134dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="118dp"
         android:text="Result"
-        app:layout_constraintBottom_toTopOf="@+id/WebTextView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.155"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/SourceSelectionSpinner" />
 
     <Button
         android:id="@+id/testButton"
@@ -50,13 +50,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
         android:layout_marginLeft="50dp"
-        android:layout_marginTop="45dp"
-        android:layout_marginEnd="273dp"
-        android:layout_marginRight="273dp"
-        android:layout_marginBottom="115dp"
+        android:layout_marginTop="8dp"
         android:text="Testing"
-        app:layout_constraintBottom_toTopOf="@+id/WebTextView"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/showResultButton" />
 
@@ -87,6 +82,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/shore" />
+
+    <Button
+        android:id="@+id/wikiButton"
+        android:layout_width="106dp"
+        android:layout_height="47dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="52dp"
+        android:layout_marginRight="52dp"
+        android:text="Wiki"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/StartButton" />
 
 
 </android.support.constraint.ConstraintLayout>
