--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -15,9 +15,16 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:scrollbars="horizontal|vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/leagueSelectionSpinner">
+
+        <HorizontalScrollView
+            android:id="@+id/horizontalScrollView"
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:scrollbars="horizontal|vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -41,6 +48,7 @@
             </TableLayout>
 
         </LinearLayout>
+        </HorizontalScrollView>
     </ScrollView>
 
     <ImageView
