--- a/app/src/main/res/layout/soccer_row.xml
+++ b/app/src/main/res/layout/soccer_row.xml
@@ -80,4 +80,14 @@
         android:singleLine="true"
         android:lines="1"
         android:textStyle="normal"/>
+
+    <TextView
+        android:layout_width="200dp"
+        android:layout_height="20dp"
+        android:id="@+id/testing_cell"
+        android:gravity="left"
+        android:layout_gravity="fill"
+        android:singleLine="true"
+        android:lines="1"
+        android:textStyle="normal"/>
 </TableRow>
